Fix navigation on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,10 @@
 @plugin '@tailwindcss/typography';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
+  --background: #ededed;
+  --foreground: #ededed;
 }
 
 @theme inline {
@@ -15,7 +17,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /* --background: #0a0a0a; */
+    --background: #ededed;
     --foreground: #ededed;
   }
 }
